--- a/src/styles/BookForm.css
+++ b/src/styles/BookForm.css
@@ -49,9 +49,9 @@
 }
 
 #category {
-  width: 285px;
+  width: 400px;
   height: 45px;
-  margin: 19px 34px 0;
+  margin: 19px 10px 0;
   padding: 6px 15px 9px 16px;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
